--- a/src/widgets/cartCard/cartCard.module.css
+++ b/src/widgets/cartCard/cartCard.module.css
@@ -50,7 +50,7 @@
 
 .number {
     color: var(--text-color);
-    font-size: 16px;
+    font-size: clamp(11px, 1vw, 16px);
     font-weight: 600;
 }
 
@@ -69,13 +69,13 @@
 }
 
 .name {
-    font-size: 18px;
+    font-size: clamp(14px, 1vw, 18px);
     font-weight: 600;
     color: var(--text-color);
 }
 
 .price {
-    font-size: 16px;
+    font-size: clamp(13px, 1vw, 16px);
     color: var(--primary-color);
     font-weight: 600;
 }
