--- a/src/widgets/checkout/checkout.module.css
+++ b/src/widgets/checkout/checkout.module.css
@@ -17,16 +17,16 @@
 
 .text {
     font-weight: 400;
-    font-size: 16px;
+    font-size: clamp(12px, 1vw, 16px);
 }
 
 .price {
-    font-size: 19px;
+    font-size: clamp(14px, 1vw, 19px);
     font-weight: 400;
 }
 
 .total {
-    font-size: 14px;
+    font-size: clamp(11px, 1vw, 14px);
     font-weight: 400;
     color: #BEBEBE;
 }
