--- a/src/widgets/productCard/productCard.module.css
+++ b/src/widgets/productCard/productCard.module.css
@@ -67,7 +67,7 @@
 }
 
 .title {
-    font-size: 19px;
+    font-size: clamp(13px, 1vw, 19px);
     font-weight: 700;
     color: var(--text-color-secondary);
     position: relative;
@@ -75,7 +75,7 @@
 }
 
 .description {
-    font-size: 15px;
+    font-size: clamp(11px, 1vw, 15px);
     color: #5B5B5E;
     position: relative;
 }
