--- a/src/widgets/productCardList/productCardList.module.css
+++ b/src/widgets/productCardList/productCardList.module.css
@@ -4,3 +4,18 @@
     grid-template-columns: repeat(3, auto);
     gap: 30px;
 }
+
+
+@media (width <= 1360px) {
+    .list {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+}
+
+@media (width <= 768px) {
+    .list {
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+}
